# speekium

./: .bandit  .gitignore  AI_WORK_COMPLETE.md  ARCHITECTURE_FIX.md  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CODE_CLEANUP_REPORT.md  COMPLETION_REPORT.md  CONFIG_REFACTOR_DESIGN.md  CONFIG_REFACTOR_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DAEMON_EXIT_FIX_SUMMARY.md  DAEMON_MODE.md  DAEMON_STARTUP_FIX_SUMMARY.md  DELIVERY_REPORT.md  DESIGN_DAEMON_STARTUP.md  DOCS.md  DOCUMENTATION_INDEX.md  FEATURES_COMPLETE.md  FINAL_CHECKLIST.md  FINAL_FEATURES_REPORT.md  FINAL_HANDOFF.md  FINAL_STATUS.md  FINAL_STATUS_V2.md  HISTORY_FIX_REPORT.md  HOW_TO_START.md  INIT_PROGRESS_FIX.md  INTEGRATION_TEST_RESULTS.md  LICENSE  MICROPHONE_TEST_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_STEP_BY_STEP.md  MIGRATION_PLAN.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_STATUS.md  NEXT_STEPS.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE_3_COMPLETION_REPORT.md  (+73 more)
.backup/: backend_server.py.bak
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
docs/: CICD_ARCHITECTURE.md  CICD_QUICKSTART.md  CICD_SUMMARY.md  ci_cd_security.md  dependencies.md  logging.md  product-interaction-design.md  safety_scan_results.md
docs/development/: daemon-protocol.md  llm-streaming.md  setup.md  socket-ipc-architecture.md  socket-quickstart.md  testing.md
docs/guides/: daemon-mode.md  shortcuts.md  tts-streaming.md
docs/operations/: ci-cd.md  resource_limits.md
docs/plans/: 2025-01-13-conversation-management-prd.md  2026-01-07-ui-redesign.md  2026-01-08-audio-recorder-migration.md  2026-01-08-tts-engine-migration.md
docs/user/: shortcuts.md  tts-features.md
public/: ptt-overlay.html
scripts/: add-sidecar.sh  build-signed-local.sh  cleanup_stuck_daemon.sh  security-check.sh
shared-types/: Cargo.toml  README.md  enums.ts  events.ts  index.d.ts  index.ts  interfaces.ts  package-lock.json  package.json
shared-types/src/: errors.rs  events.rs  lib.rs  models.rs
speekium/: __init__.py  progress.py  utils.py  voice_assistant.py
speekium/models/: __init__.py  asr.py  llm.py  tts.py  vad.py
speekium/recording/: __init__.py  recorder.py
speekium/services/: __init__.py  asr_service.py  base.py  config_service.py  container.py  llm_service.py  recording_service.py  tts_service.py  vad_service.py
src/: App.css  App.tsx  Settings.tsx  index.css  main.tsx  useTauriAPI.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  Speekium.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json  macos-only.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app.rs  audio.rs  daemon.rs  database.rs  db_commands.rs  lib.rs  main.rs  shortcuts.rs  state.rs  types.rs  ui.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/daemon/: detector.rs  mod.rs  process.rs  socket_client.rs  startup.rs  startup_tests.rs  state.rs
src-tauri/src/event/: bus.rs  listener.rs  mod.rs
src-tauri/src/platform/: macos.rs  mod.rs
src-tauri/src/ptt/: mod.rs  reader.rs  reader_tests.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/components/: AudioWaveform.tsx  ChatBubble.tsx  ClipboardHistory.tsx  CollapsibleInput.tsx  ConversationTemplates.tsx  EmptyState.tsx  ErrorReportButton.tsx  HistoryDrawer.tsx  HotkeyRecorder.module.css  HotkeyRecorder.tsx  HotkeyStatusPanel.tsx  LanguageSwitcher.tsx  LoadingScreen.tsx  MiniModeBubble.tsx  ModeStatusBadge.tsx  NewSessionDialog.tsx  NotificationCenter.tsx  SaveStatusIndicator.tsx  SpeekiumIcon.tsx  SystemToast.tsx  ThemeProvider.tsx  ThemeToggle.tsx  WorkModeToast.tsx
src/constants/: models.ts
src/contexts/: ErrorContext.tsx  SettingsContext.tsx  WorkModeContext.tsx
src/hooks/: index.ts  useAppState.ts  useEventListener.ts
src/i18n/: config.ts  index.ts
src/i18n/locales/en/: app.json  common.json  history.json  session.json  settings.json  translations.json
src/i18n/locales/ja/: translations.json
src/i18n/locales/zh/: app.json  common.json  history.json  session.json  settings.json  translations.json
src/stores/: ConfigStore.tsx
src/types/: hotkey.ts  index.ts  workMode.ts
src/utils/: hotkeyParser.ts
tauri-prototype/: BUILD_QUICKSTART.md  PLUGINS_GUIDE.md  PROJECT_STATUS.md  PROTOTYPE_SUMMARY.md  QUICKSTART.md  README.md  backend.py  package-lock.json  package.json  pyproject.toml  test-api.html  test_llm_backend.py
tauri-prototype/docs/: 2026-01-08-audio-recorder-migration.md  2026-01-08-build-configuration.md  2026-01-08-e2e-testing-guide.md  llm-backend.md
tauri-prototype/scripts/: build_python.py
tauri-prototype/src/: App.css  App.tsx  useTauriAPI.ts
tauri-prototype/src-python/: audio_recorder.py  backend_main.py  llm_backend.py  speerium-backend.spec  tts_engine.py
tauri-prototype/src-tauri/: Cargo.toml  config.json
tauri-prototype/src-tauri/binaries/: speekium-backend
tauri-prototype/src-tauri/capabilities/: default.json
tauri-prototype/src-tauri/src/: lib.rs  main.rs
tests/: TDD_FIX_REPORT.md  __init__.py  conftest.py  mock_server.py  test_ptt_blocking.py  test_socket_timeout.py  verify_fix.sh
tests/e2e/: basic.spec.ts  error-report.spec.ts  onboarding.spec.ts  performance.spec.ts  settings.spec.ts  theme.spec.ts  voice-mode.spec.ts
tests/security/: README.md  test_security_fixes.py
tests/socket/: test_socket_client.py  test_socket_integration.py  test_socket_server.py
tests/unit/: test_asr.py  test_backends.py  test_config.py  test_config_loader.py  test_logging.py  test_onboarding.py  test_progress.py  test_resource_limiter.py  test_speekium_utils.py  test_vad.py  test_voice_pipeline.py
web/: floating.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChatHistory.tsx  ControlPanel.tsx  Header.tsx  MessageBubble.tsx  SettingsPanel.tsx  Sidebar.tsx  SimpleWaveform.tsx  StatusBar.tsx
web/src/hooks/: usePywebview.ts  useTheme.ts
web/src/types/: index.ts
