[project]
name = "speekium"
version = "0.1.0"
description = "A smart voice assistant with pluggable LLM backends"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "kanweiwei", email = "kwwnjujlc@gmail.com"}
]
requires-python = ">=3.10"
keywords = [
    "voice-assistant",
    "llm",
    "tts",
    "asr",
    "speech-recognition",
    "text-to-speech",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Audio & TTS dependencies
    "edge-tts>=7.2.7,<8.0.0",  # TTS engine - locked to v7.x for stability
    "sounddevice>=0.5.3,<0.6.0",  # Audio I/O - locked to v0.5.x

    # Machine Learning dependencies
    "numpy>=2.2.0,<3.0.0",  # NumPy 2.x - major version lock for compatibility
    "scipy>=1.15.0,<2.0.0",  # Scientific computing - locked to v1.x
    "torch>=2.9.0,<3.0.0",  # PyTorch - locked to v2.x major version
    "torchaudio>=2.9.0,<3.0.0",  # PyTorch audio - matches torch version
    "funasr>=1.3.0,<2.0.0",  # ASR model - locked to v1.x

    # Network & HTTP dependencies
    "httpx>=0.28.0,<1.0.0",  # Async HTTP client - pre-1.0 API stability
    "urllib3>=2.6.3,<3.0.0",  # Security fix for CVE-2026-21441

    # Low-level dependencies
    "llvmlite>=0.46.0,<1.0.0",  # LLVM compiler - updated from 0.42.0
    "numba>=0.60,<1.0.0",  # JIT compiler - supports numpy 2.x (funasr dependency)

    # GUI dependencies
    "pywebview>=6.1,<7.0.0",  # Web view - locked to v6.x
    "pynput>=1.8.1,<2.0.0",  # Global hotkey - updated from 1.7.6
    "pystray>=0.19.5,<0.20.0",  # System tray - locked to v0.19.x
    "Pillow>=12.1.0,<13.0.0",  # Image library - updated from 10.2.0, locked to v12.x

    # Logging
    "structlog>=25.5.0,<26.0.0",  # Structured logging - updated from 24.1.0
]

[project.optional-dependencies]
gui = ["pywebview"]

[project.urls]
Homepage = "https://github.com/kanweiwei/speekium"
Repository = "https://github.com/kanweiwei/speekium"
Issues = "https://github.com/kanweiwei/speekium/issues"

[project.scripts]
speekium = "speekium:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    # Linting and code quality
    "ruff>=0.1.0,<1.0.0",  # Linter and formatter

    # Testing framework
    "pytest>=7.0.0,<8.0.0",  # Testing framework - locked to v7.x
    "pytest-asyncio>=0.23.0,<1.0.0",  # Async testing support
    "pytest-cov>=4.1.0,<5.0.0",  # Coverage plugin
    "pytest-mock>=3.12.0,<4.0.0",  # Mocking support
    "pytest-timeout>=2.2.0,<3.0.0",  # Timeout control

    # Security scanning
    "bandit>=1.7.5,<2.0.0",  # Python security linter
    "safety>=3.0.0,<4.0.0",  # Dependency vulnerability scanner
    "pip-audit>=2.10.0,<3.0.0",  # Alternative security scanner
]

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    ".pytest_cache",
    "tauri-prototype",
]

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and isort (I)
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C90"]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults
    "C901",  # Function too complex (will refactor later)
    "F401",  # Unused imports (will clean up in P2)
    "F841",  # Unused variables (will clean up in P2)
    "F541",  # f-string without placeholders (will clean up in P2)
    "I001",  # Import sorting (isort will handle this)
    "UP035", # Deprecated typing imports (will upgrade in P2)
    "UP045", # Type annotation style (will upgrade in P2)
    "UP006", # Type annotation style (will upgrade in P2)
    "UP015", # Unnecessary mode argument (will clean up in P2)
    "B007",  # Loop variable not used (intentional in some cases)
    "B018",  # Useless expression (will fix in test refactoring)
    "E402",  # Module level import not at top (intentional in tests)
    "SIM105", # Use contextlib.suppress (will refactor in P2)
    "SIM108", # Use ternary operator (will refactor in P2)
    "SIM117", # Use single with statement (will refactor in P2)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with 4 spaces
indent-style = "space"

# Unix line endings
line-ending = "lf"
